--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.1'
+    testImplementation 'androidx.test:core-ktx:1.2.0'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 }
